sample/kubernetes/06-application.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: application-service
  name: application-service
spec:
  type: NodePort
  ports:
    - name: application-port
      port: 8080
      nodePort: 30080
      targetPort: 8080
  selector:
    app: application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: application
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: application
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
