sample/kubernetes/07-application-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: application
      http:
        paths:
          - path: /create
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 8080
          - path: /check
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 8080
